--- a/objects_In_JS/object.html
+++ b/objects_In_JS/object.html
@@ -43,8 +43,26 @@
         "e": 5,
       }
       var length  = getObjLength(obj1)
-      console.log("Length of na obj1 is: "+length)
-
+      console.log("Length of an obj1 is: "+length)
+      var library = [ 
+    {
+        title: 'Bill Gates',
+        author: 'The Road Ahead',
+        readingStatus: true
+    },
+    {
+        title: 'Steve Jobs',
+        author: 'Walter Isaacson',
+        readingStatus: true
+    },
+    {
+        title: 'Mockingjay: The Final Book of The Hunger Games',
+        author: 'Suzanne Collins',
+        readingStatus: false
+    }];
+    for ( var i  = 0; i<= library.length; i++){
+        
+    }
 
     </script>
   </body>
