--- a/objects_In_JS/object.html
+++ b/objects_In_JS/object.html
@@ -61,7 +61,12 @@
         readingStatus: false
     }];
     for ( var i  = 0; i<= library.length; i++){
-        
+        var book = "'"+ library[i].title + "'"+" by "+ library[i].author +".";
+        if (library[i].readingStatus){
+            console.log("Already read " + book);
+        }else{
+            console.log("You still need to read " + book);
+        }
     }
 
     </script>
